# network-interfaces

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  Dockerfile.ci  README.md  build-server.sh  build-test.sh  build.sh  dev-server.sh  install.sh
.devcontainer/: devcontainer.json
.github/workflows/: build-release.yaml  manual-dispatch.yml  test.yml
cpp/: CMakeLists.txt  Config.cmake.in  network_interfaces.pc.in
cpp/include/network_interfaces/: control_type.h
cpp/include/network_interfaces/zmq/: network.h
cpp/include/network_interfaces/zmq/exceptions/: InvalidControlTypeVectorException.h  UnknownControlTypeException.h
cpp/scripts/: zmq_loopback_command.cpp  zmq_loopback_state.cpp
cpp/test/: CMakeLists.txt  test_communication.cpp  test_zmq_communication.cpp
cpp/test/tests/: test_robot.cpp
franka/: network.h  network.py
python/: pyproject.toml  setup.py
python/include/: communication_interfaces_bindings.hpp
python/network_interfaces/: control_type.py
python/network_interfaces/tests/: test_communication.py
python/network_interfaces/zmq/: network.py
python/scripts/: zmq_loopback_command.py  zmq_loopback_state.py
python/src/: bind_tcp.cpp  bind_udp.cpp  bind_zmq.cpp  communication_interfaces_bindings.cpp
python/test/: test_tcp.py  test_udp.py  test_zmq.py  test_zmq_communication.py
python/tests/: test_zmq_communication.py
source/: Dockerfile  README.md  dev-server.sh  install.sh
source/communication_interfaces/: CMakeLists.txt  communication_interfaces-config.cmake.in  communication_interfaces.pc.in
source/communication_interfaces/include/communication_interfaces/: ByteArray.hpp
source/communication_interfaces/include/communication_interfaces/exceptions/: SocketConfigurationException.hpp
source/communication_interfaces/include/communication_interfaces/sockets/: ISocket.hpp  TCPClient.hpp  TCPServer.hpp  TCPSocket.hpp  UDPClient.hpp  UDPServer.hpp  UDPSocket.hpp  ZMQPublisher.hpp  ZMQPublisherSubscriber.hpp  ZMQSocket.hpp  ZMQSubscriber.hpp
source/communication_interfaces/src/: ByteArray.cpp
source/communication_interfaces/src/sockets/: ISocket.cpp  TCPClient.cpp  TCPServer.cpp  TCPSocket.cpp  UDPClient.cpp  UDPServer.cpp  UDPSocket.cpp  ZMQPublisher.cpp  ZMQPublisherSubscriber.cpp  ZMQSocket.cpp  ZMQSubscriber.cpp
source/communication_interfaces/test/tests/: test_byte_array.cpp  test_tcp_communication.cpp  test_udp_communication.cpp  test_zmq_communication.cpp
